<resources>
    <string name="app_name">CarrosMaterial</string>
    <string name="action_settings">Settings</string>
    <string name="titulo_agregar">AGREGAR</string>

    <string name="Placa">Placa</string>
    <string name="Marca">Marca</string>
    <string name="costo">Costo</string>
    <string name="Color">Color</string>


    <string name="cedula">Cédula</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="guardar">Guardar </string>
    <string name="limpiar">Limpiar</string>

    <string name="blanco">Blanco</string>
    <string name="rojo">Rojo</string>
    <string name="azul">Azul</string>
    <string name="amarillo">Amarillo</string>

    <string name="mercedes">Mercedes</string>
    <string name="ford">Ford</string>
    <string name="toyota">Toyota</string>
    <string name="mazda">Mazda</string>
    <string name="dodge">Dodge</string>


    <string name="guardado_exitoso">Carro Guardado Exitosamente</string>




    <string-array name="color">

        <item>@string/blanco</item>
        <item>@string/rojo</item>
        <item>@string/amarillo</item>
        <item>@string/azul</item>

    </string-array>

    <string-array name="marca">

        <item>@string/mercedes</item>
        <item>@string/ford</item>
        <item>@string/toyota</item>
        <item>@string/mazda</item>
        <item>@string/dodge</item>

    </string-array>
</resources>
